gramorpher/antlr/ANTLRv4Parser.py
# Generated from ANTLRv4Parser.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ANTLRv4Parser ( Parser ):

    grammarFileName = "ANTLRv4Parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'options'", "'tokens'", "'channels'", "'import'", 
                     "'fragment'", "'lexer'", "'parser'", "'grammar'", "'protected'", 
                     "'public'", "'private'", "'returns'", "'locals'", "'throws'", 
                     "'catch'", "'finally'", "'mode'" ]

    symbolicNames = [ "<INVALID>", "TOKEN_REF", "RULE_REF", "LEXER_CHAR_SET", 
                      "DOC_COMMENT", "BLOCK_COMMENT", "LINE_COMMENT", "INT", 
                      "STRING_LITERAL", "UNTERMINATED_STRING_LITERAL", "BEGIN_ARGUMENT", 
                      "BEGIN_ACTION", "OPTIONS", "TOKENS", "CHANNELS", "IMPORT", 
                      "FRAGMENT", "LEXER", "PARSER", "GRAMMAR", "PROTECTED", 
                      "PUBLIC", "PRIVATE", "RETURNS", "LOCALS", "THROWS", 
                      "CATCH", "FINALLY", "MODE", "COLON", "COLONCOLON", 
                      "COMMA", "SEMI", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "RARROW", "LT", "GT", "ASSIGN", "QUESTION", "STAR", 
                      "PLUS_ASSIGN", "PLUS", "OR", "DOLLAR", "RANGE", "DOT", 
                      "AT", "POUND", "NOT", "ID", "WS", "ERRCHAR", "END_ARGUMENT", 
                      "UNTERMINATED_ARGUMENT", "ARGUMENT_CONTENT", "END_ACTION", 
                      "UNTERMINATED_ACTION", "ACTION_CONTENT", "OPT_LBRACE", 
                      "UNTERMINATED_CHAR_SET" ]

    RULE_grammarSpec = 0
    RULE_grammarDecl = 1
    RULE_grammarType = 2
    RULE_prequelConstruct = 3
    RULE_optionsSpec = 4
    RULE_option = 5
    RULE_optionValue = 6
    RULE_delegateGrammars = 7
    RULE_delegateGrammar = 8
    RULE_tokensSpec = 9
    RULE_channelsSpec = 10
    RULE_idList = 11
    RULE_action_ = 12
    RULE_actionScopeName = 13
    RULE_actionBlock = 14
    RULE_argActionBlock = 15
    RULE_modeSpec = 16
    RULE_rules = 17
    RULE_ruleSpec = 18
    RULE_parserRuleSpec = 19
    RULE_exceptionGroup = 20
    RULE_exceptionHandler = 21
    RULE_finallyClause = 22
    RULE_rulePrequel = 23
    RULE_ruleReturns = 24
    RULE_throwsSpec = 25
    RULE_localsSpec = 26
    RULE_ruleAction = 27
    RULE_ruleModifiers = 28
    RULE_ruleModifier = 29
    RULE_ruleBlock = 30
    RULE_ruleAltList = 31
    RULE_labeledAlt = 32
    RULE_lexerRuleSpec = 33
    RULE_lexerRuleBlock = 34
    RULE_lexerAltList = 35
    RULE_lexerAlt = 36
    RULE_lexerElements = 37
    RULE_lexerElement = 38
    RULE_labeledLexerElement = 39
    RULE_lexerBlock = 40
    RULE_lexerCommands = 41
    RULE_lexerCommand = 42
    RULE_lexerCommandName = 43
    RULE_lexerCommandExpr = 44
    RULE_altList = 45
    RULE_alternative = 46
    RULE_element = 47
    RULE_labeledElement = 48
    RULE_ebnf = 49
    RULE_blockSuffix = 50
    RULE_ebnfSuffix = 51
    RULE_lexerAtom = 52
    RULE_atom = 53
    RULE_notSet = 54
    RULE_blockSet = 55
    RULE_setElement = 56
    RULE_block = 57
    RULE_ruleref = 58
    RULE_characterRange = 59
    RULE_terminal = 60
    RULE_elementOptions = 61
    RULE_elementOption = 62
    RULE_identifier = 63

    ruleNames =  [ "grammarSpec", "grammarDecl", "grammarType", "prequelConstruct", 
                   "optionsSpec", "option", "optionValue", "delegateGrammars", 
                   "delegateGrammar", "tokensSpec", "channelsSpec", "idList", 
                   "action_", "actionScopeName", "actionBlock", "argActionBlock", 
                   "modeSpec", "rules", "ruleSpec", "parserRuleSpec", "exceptionGroup", 
                   "exceptionHandler", "finallyClause", "rulePrequel", "ruleReturns", 
                   "throwsSpec", "localsSpec", "ruleAction", "ruleModifiers", 
                   "ruleModifier", "ruleBlock", "ruleAltList", "labeledAlt", 
                   "lexerRuleSpec", "lexerRuleBlock", "lexerAltList", "lexerAlt", 
                   "lexerElements", "lexerElement", "labeledLexerElement", 
                   "lexerBlock", "lexerCommands", "lexerCommand", "lexerCommandName", 
                   "lexerCommandExpr", "altList", "alternative", "element", 
                   "labeledElement", "ebnf", "blockSuffix", "ebnfSuffix", 
                   "lexerAtom", "atom", "notSet", "blockSet", "setElement", 
                   "block", "ruleref", "characterRange", "terminal", "elementOptions", 
                   "elementOption", "identifier" ]

    EOF = Token.EOF
    TOKEN_REF=1
    RULE_REF=2
    LEXER_CHAR_SET=3
    DOC_COMMENT=4
    BLOCK_COMMENT=5
    LINE_COMMENT=6
    INT=7
    STRING_LITERAL=8
    UNTERMINATED_STRING_LITERAL=9
    BEGIN_ARGUMENT=10
    BEGIN_ACTION=11
    OPTIONS=12
    TOKENS=13
    CHANNELS=14
    IMPORT=15
    FRAGMENT=16
    LEXER=17
    PARSER=18
    GRAMMAR=19
    PROTECTED=20
    PUBLIC=21
    PRIVATE=22
    RETURNS=23
    LOCALS=24
    THROWS=25
    CATCH=26
    FINALLY=27
    MODE=28
    COLON=29
    COLONCOLON=30
    COMMA=31
    SEMI=32
    LPAREN=33
    RPAREN=34
    LBRACE=35
    RBRACE=36
    RARROW=37
    LT=38
    GT=39
    ASSIGN=40
    QUESTION=41
    STAR=42
    PLUS_ASSIGN=43
    PLUS=44
    OR=45
    DOLLAR=46
    RANGE=47
    DOT=48
    AT=49
    POUND=50
    NOT=51
    ID=52
    WS=53
    ERRCHAR=54
    END_ARGUMENT=55
    UNTERMINATED_ARGUMENT=56
    ARGUMENT_CONTENT=57
    END_ACTION=58
    UNTERMINATED_ACTION=59
    ACTION_CONTENT=60
    OPT_LBRACE=61
    UNTERMINATED_CHAR_SET=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class GrammarSpecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def grammarDecl(self):
            return self.getTypedRuleContext(ANTLRv4Parser.GrammarDeclContext,0)


        def rules(self):
            return self.getTypedRuleContext(ANTLRv4Parser.RulesContext,0)


        def EOF(self):
            return self.getToken(ANTLRv4Parser.EOF, 0)

        def DOC_COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(ANTLRv4Parser.DOC_COMMENT)
            else:
                return self.getToken(ANTLRv4Parser.DOC_COMMENT, i)

        def prequelConstruct(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ANTLRv4Parser.PrequelConstructContext)
            else:
                return self.getTypedRuleContext(ANTLRv4Parser.PrequelConstructContext,i)


        def modeSpec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ANTLRv4Parser.ModeSpecContext)
            else:
                return self.getTypedRuleContext(ANTLRv4Parser.ModeSpecContext,i)


        def getRuleIndex(self):
            return ANTLRv4Parser.RULE_grammarSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrammarSpec" ):
                listener.enterGrammarSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrammarSpec" ):
                listener.exitGrammarSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGrammarSpec" ):
                return visitor.visitGrammarSpec(self)
            else:
                return visitor.visitChildren(self)




    def grammarSpec(self):

        localctx = ANTLRv4Parser.GrammarSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_grammarSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ANTLRv4Parser.DOC_COMMENT:
                self.state = 128
                self.match(ANTLRv4Parser.DOC_COMMENT)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.grammarDecl()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ANTLRv4Parser.OPTIONS) | (1 << ANTLRv4Parser.TOKENS) | (1 << ANTLRv4Parser.CHANNELS) | (1 << ANTLRv4Parser.IMPORT) | (1 << ANTLRv4Parser.AT))) != 0):
                self.state = 135
                self.prequelConstruct()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 141
            self.rules()
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ANTLRv4Parser.MODE:
                self.state = 142
                self.modeSpec()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 148
            self.match(ANTLRv4Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GrammarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def grammarType(self):
            return self.getTypedRuleContext(ANTLRv4Parser.GrammarTypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(ANTLRv4Parser.IdentifierContext,0)


        def SEMI(self):
            return self.getToken(ANTLRv4Parser.SEMI, 0)

        def getRuleIndex(self):
            return ANTLRv4Parser.RULE_grammarDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrammarDecl" ):
                listener.enterGrammarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrammarDecl" ):
                listener.exitGrammarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGrammarDecl" ):
                return visitor.visitGrammarDecl(self)
            else:
                return visitor.visitChildren(self)




    def grammarDecl(self):

        localctx = ANTLRv4Parser.GrammarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_grammarDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.grammarType()
            self.state = 151
            self.identifier()
            self.state = 152
            self.match(ANTLRv4Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GrammarTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEXER(self):
            return self.getToken(ANTLRv4Parser.LEXER, 0)

        def GRAMMAR(self):
            return self.getToken(ANTLRv4Parser.GRAMMAR, 0)

        def PARSER(self):
            return self.getToken(ANTLRv4Parser.PARSER, 0)

        def getRuleIndex(self):
            return ANTLRv4Parser.RULE_grammarType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrammarType" ):
                listener.enterGrammarType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrammarType" ):
                listener.exitGrammarType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGrammarType" ):
                return visitor.visitGrammarType(self)
            else:
                return visitor.visitChildren(self)




    def grammarType(self):

        localctx = ANTLRv4Parser.GrammarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_grammarType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ANTLRv4Parser.LEXER]:
                self.state = 154
                self.match(ANTLRv4Parser.LEXER)
                self.state = 155
                self.match(ANTLRv4Parser.GRAMMAR)
                pass
            elif token in [ANTLRv4Parser.PARSER]:
                self.state = 156
                self.match(ANTLRv4Parser.PARSER)
                self.state = 157
                self.match(ANTLRv4Parser.GRAMMAR)
                pass
            elif token in [ANTLRv4Parser.GRAMMAR]:
                self.state = 158
                self.match(ANTLRv4Parser.GRAMMAR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrequelConstructContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def optionsSpec(self):
            return self.getTypedRuleContext(ANTLRv4Parser.OptionsSpecContext,0)


        def delegateGrammars(self):
            return self.getTypedRuleContext(ANTLRv4Parser.DelegateGrammarsContext,0)


        def tokensSpec(self):
            return self.getTypedRuleContext(ANTLRv4Parser.TokensSpecContext,0)


        def channelsSpec(self):
            return self.getTypedRuleContext(ANTLRv4Parser.ChannelsSpecContext,0)


        def action_(self):
            return self.getTypedRuleContext(ANTLRv4Parser.Action_Context,0)


        def getRuleIndex(self):
            return ANTLRv4Parser.RULE_prequelConstruct

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrequelConstruct" ):
                listener.enterPrequelConstruct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrequelConstruct" ):
                listener.exitPrequelConstruct(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrequelConstruct" ):
                return visitor.visitPrequelConstruct(self)
            else:
                return visitor.visitChildren(self)




    def prequelConstruct(self):

        localctx = ANTLRv4Parser.PrequelConstructContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_prequelConstruct)
        try:
            self.state = 166
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ANTLRv4Parser.OPTIONS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.optionsSpec()
                pass
            elif token in [ANTLRv4Parser.IMPORT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.delegateGrammars()
                pass
            elif token in [ANTLRv4Parser.TOKENS]:
                self.enterOuterAlt(localctx, 3)
                self.state = 163
                self.tokensSpec()
                pass
            elif token in [ANTLRv4Parser.CHANNELS]:
                self.enterOuterAlt(localctx, 4)
                self.state = 164
                self.channelsSpec()
                pass
            elif token in [ANTLRv4Parser.AT]:
                self.enterOuterAlt(localctx, 5)
                self.state = 165
                self.action_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionsSpecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPTIONS(self):
            return self.getToken(ANTLRv4Parser.OPTIONS, 0)

        def LBRACE(self):
            return self.getToken(ANTLRv4Parser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ANTLRv4Parser.RBRACE, 0)

        def option(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ANTLRv4Parser.OptionContext)
            else:
                return self.getTypedRuleContext(ANTLRv4Parser.OptionContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(ANTLRv4Parser.SEMI)
            else:
                return self.getToken(ANTLRv4Parser.SEMI, i)

        def getRuleIndex(self):
            return ANTLRv4Parser.RULE_optionsSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOptionsSpec" ):
                listener.enterOptionsSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOptionsSpec" ):
                listener.exitOptionsSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOptionsSpec" ):
                return visitor.visitOptionsSpec(self)
            else:
                return visitor.visitChildren(self)




    def optionsSpec(self):

        localctx = ANTLRv4Parser.OptionsSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_optionsSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(ANTLRv4Parser.OPTIONS)
            self.state = 169
            self.match(ANTLRv4Parser.LBRACE)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ANTLRv4Parser.TOKEN_REF or _la==ANTLRv4Parser.RULE_REF:
                self.state = 170
                self.option()
                self.state = 171
                self.match(ANTLRv4Parser.SEMI)
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 178
            self.match(ANTLRv4Parser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(ANTLRv4Parser.IdentifierContext,0)


        def ASSIGN(self):
            return self.getToken(ANTLRv4Parser.ASSIGN, 0)

        def optionValue(self):
            return self.getTypedRuleContext(ANTLRv4Parser.OptionValueContext,0)


        def getRuleIndex(self):
            return ANTLRv4Parser.RULE_option

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOption" ):
                listener.enterOption(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOption" ):
                listener.exitOption(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOption" ):
                return visitor.visitOption(self)
            else:
                return visitor.visitChildren(self)




    def option(self):

        localctx = ANTLRv4Parser.OptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_option)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.identifier()
            self.state = 181
            self.match(ANTLRv4Parser.ASSIGN)
            self.state = 182
            self.optionValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ANTLRv4Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(ANTLRv4Parser.IdentifierContext,i)


        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(ANTLRv4Parser.DOT)
            else:
                return self.getToken(ANTLRv4Parser.DOT, i)

        def STRING_LITERAL(self):
            return self.getToken(ANTLRv4Parser.STRING_LITERAL, 0)

        def actionBlock(self):
            return self.getTypedRuleContext(ANTLRv4Parser.ActionBlockContext,0)


        def INT(self):
            return self.getToken(ANTLRv4Parser.INT, 0)

        def getRuleIndex(self):
            return ANTLRv4Parser.RULE_optionValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOptionValue" ):
                listener.enterOptionValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOptionValue" ):
                listener.exitOptionValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOptionValue" ):
                return visitor.visitOptionValue(self)
            else:
                return visitor.visitChildren(self)




    def optionValue(self):

        localctx = ANTLRv4Parser.OptionValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_optionValue)
        self._la = 0 # Token type
        try:
            self.state = 195
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ANTLRv4Parser.TOKEN_REF, ANTLRv4Parser.RULE_REF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 184
                self.identifier()
                self.state = 189
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==ANTLRv4Parser.DOT:
                    self.state = 185
                    self.match(ANTLRv4Parser.DOT)
                    self.state = 186
                    self.identifier()
                    self.state = 191
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [ANTLRv4Parser.STRING_LITERAL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 192
                self.match(ANTLRv4Parser.STRING_LITERAL)
                pass
            elif token in [ANTLRv4Parser.BEGIN_ACTION]:
                self.enterOuterAlt(localctx, 3)
                self.state = 193
                self.actionBlock()
                pass
            elif token in [ANTLRv4Parser.INT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 194
                self.match(ANTLRv4Parser.INT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DelegateGrammarsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(ANTLRv4Parser.IMPORT, 0)

        def delegateGrammar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ANTLRv4Parser.DelegateGrammarContext)
            else:
                return self.getTypedRuleContext(ANTLRv4Parser.DelegateGrammarContext,i)


        def SEMI(self):
            return self.getToken(ANTLRv4Parser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ANTLRv4Parser.COMMA)
            else:
                return self.getToken(ANTLRv4Parser.COMMA, i)
